array.island.Island.scala.code
var liste=()

def island(num:Array[Int]): Int = {
  for (i<-1 to num.length-1){
    if ((num(i+1) > num(i)) && (num(i) > 0)){
      liste = liste + Array(num(i))
    }
  }
  return liste.length
}